# Montpellier_bike_traffic

./: .env copy  .gitignore  README.md  backend_generate_json.py  backend_generate_stats.py  create_final_dataset.py  docker-compose.yml  main.py  predict_hourly.py  pyproject.toml  requirements.txt
API/: app.py
API/ETL/: etl_bike_data.py
API/routers/: bike.py  holidays.py  weather.py
backend/: Dockerfile  api_server.py  requirements.txt
backend/data_meteo/: meteo.py  supabase_client.py
backend/preparation_counters_forecast/: load.py  run_pipeline.py
backend/train_model_xgboost/: pipeline_train.py
data_calendrier/: api.py  audit_calendrier.py  clean.py  main.py  pipeline.py
data_meteo/: cleaners.py  main.py  meteo.py  pipeline.py
django-frontend/: manage.py
django-frontend/bike_frontend/: asgi.py  settings.py  urls.py  wsgi.py
exploration/: carte_trafic_2025.html  dashboard_30_nov_2025_unified.html  exploration.ipynb
frontend/: Dockerfile  api_server.py  index.html  requirements.txt
frontend/assets/css/: style.css
frontend/train_model_xgboost/: evaluator.py  loader.py  saver.py  trainer.py
meteo/: clean_meteo_csv.py  cleaners.py  main.py  pipeline.py
preparation_counters_forecast/: config.py  extract.py  transform.py
src/api/: config.py  main.py
train_model_prophet/: config.py  evaluator.py  loader.py  pipeline.py  saver.py  train_global_daily.py  trainer.py
train_model_xgboost/: config.py  loader.py  pipeline_train.py  saver.py
train_model_xgboost/artifacts/: xgboost_Compteur_Vélo_Grabels.joblib  xgboost_Compteur_Vélo_Grossec.joblib  (+8 more)
(+43 files in other folders)
